--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -20,7 +20,7 @@ for:
       - git submodule update --init --recursive
 
     build_script:
-      - call "C:\Program Files (x86)\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvarsall.bat" x64
+      - call "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvarsall.bat" x64
       - C:\msys64\usr\bin\bash -lc "cd \"%APPVEYOR_BUILD_FOLDER%\" && scripts/appveyor-win.sh"
 
     artifacts:
